syntax = "proto3";

package com.product.stubs.cart;

option java_package = "com.product.stubs.cart";
option java_multiple_files = true;

service Cart {
  rpc addToCart(CartRequest) returns (CartResponse);
}

message CartRequest {
  repeated Product product = 1;
}

message CartResponse {
  bool added = 1;
  string message = 2;
  CartDetail cart_detail = 3;
}

message CartDetail {
  repeated Product product = 1;
  double total_quantity = 2;
  double total_amount = 3;
}

message Product {
  int32 product_id = 1;
  int32 quantity = 2;
}
